--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -14,6 +14,6 @@ img.pfp {
     text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 }
 .carousel-control-next-icon, .carousel-control-prev-icon {
-    background-image: none;
+    background-image: none !important;
     font-size: 28px;
 }
